<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/orange_2"
    android:padding="16dp">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">
        
        <androidx.cardview.widget.CardView
            android:id="@+id/card_photo"
            android:layout_width="210dp"
            android:layout_height="250dp"
            app:cardCornerRadius="20dp">
            <ImageView
                android:id="@+id/img_item_photo"
                android:src="@drawable/orange_teal"
                android:layout_width="210dp"
                android:scaleType="center"
                android:layout_height="250dp"/>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_item_name"
            android:textColor="@color/warna_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="6dp"
            android:layout_toEndOf="@+id/card_photo"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/nama_preset"/>

        <TextView
            android:id="@+id/tv_item_detail"
            android:textColor="@color/warna_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="6dp"
            android:layout_toEndOf="@+id/card_photo"
            android:layout_below="@+id/tv_item_name"
            android:textSize="16sp"
            android:text="@string/detail"/>

        <Button
            android:id="@+id/btn_favorite"
            android:layout_width="116dp"
            android:layout_height="46dp"
            android:text="@string/favorite"
            android:textSize="14sp"
            android:layout_marginLeft="12dp"
            android:layout_toEndOf="@+id/card_photo"
            android:layout_marginTop="7dp"
            android:layout_alignParentBottom="true"

            android:layout_marginBottom="7dp" />
        <Button
            android:id="@+id/btn_share"
            android:layout_width="106dp"
            android:layout_height="46dp"
            android:text="@string/share"
            android:textSize="14sp"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="12dp"
            android:layout_toEndOf="@+id/btn_favorite"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="7dp"
            android:layout_alignParentRight="true" />
        
    </RelativeLayout>

</androidx.cardview.widget.CardView>